@@ -172,5 +172,3 @@ here over 2+ - swap 1+ c! ;
 : :- here ;
 : -branch ( absaddr -- reladdr )
 here 2+ - ;
-
-hide 1mi hide 2mi hide 3mi hide 23mi
