@@ -234,4 +234,5 @@ Thanks to Christian Johansson for suggestions!
 
 ?-?-?: v1.4.7
 
- * made "type" disable quote mode (fixes words)
+ * forth: made "type" disable c64 quote mode (fixes "words")
+ * forth: removed hide, hide-to, hidden
